# crak

./: LICENSE  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
crak/: cli.py
tests/: dicttest.txt  notebook.ipynb  shadow
