[tool.poetry]
name = "crak"
version = "0.0.1"
description = "Bruteforce password cracker"
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.2"
passlib = "^1.7.4"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bandit = "^1.7.0"

[tool.poetry.scripts]
crak = "crak.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
