[tool.poetry]
name = "crak"
version = "0.0.2"
description = "Bruteforce password cracker"
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/madeinoz67/crak"
keywords = ["password", "crack", "bruteforce"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
    "Topic :: Utilities"
]

include=[
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7.1"
pandas = "^1.3.2"
passlib = "^1.7.4"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bandit = "^1.7.0"

[tool.poetry.scripts]
crak = "crak.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
